[tool.poetry]
name = "django-toggul"
version = "0.1.0"
description = "Feature flag management tool for django applications"
authors = ["50-Course <eridotdev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
